* Fixed spacing between sections * Section background

--- a/assets/scss/base/_config.scss
+++ b/assets/scss/base/_config.scss
@@ -11,9 +11,16 @@
 // --------------------------------------------------
 $black: #373737;
 $white: #fcfcfc;
+
 $primary-color: #0ba5e9;
+
+$lighter-gray: #f6f6f6;
+$light-gray: #e6e6e6;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
+
+// sections
+$sections-even-background: $lighter-gray;
 
 // header
 $site-header-overlay-color: rgba(0, 0, 0, 0.47);
